Fixed wrapping in header

--- a/dnstwister/static/sources/report.css
+++ b/dnstwister/static/sources/report.css
@@ -21,6 +21,7 @@
 
 .domains h5 {
     display: inline;
+    white-space: nowrap;
 }
 
 .ico {
